# spirited_fighting

./: Cargo.toml  README.md
assets/gltf/: man_with_armature.gltf
src/: main.rs
src/plugins/: camera.rs  mod.rs  particle_system.rs
